I actually spend time debugging a single HTML page which already worked without Angular and I decided to make it an Angular project aswell, initial commit

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  background-color: antiquewhite;
+  color: black;
+}
+
+#content{
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
